--- a/balancelines-doc.tex
+++ b/balancelines-doc.tex
@@ -7,6 +7,6 @@
 
 \section{\balancelines{světe, tohle je trošku delší text, aby bylo vidět, jak to vlastně funguje}}
 
-\balancelines{a teď? proč se to vlastně nechová tak, \textbf{jak by} mělo?}
+\balancelines{a teď? proč se to vlastně nechová tak, \textbf{jak by} mělo? No a $a = b^2$}
 \end{document}
 
