--- a/balancelines.sty
+++ b/balancelines.sty
@@ -9,6 +9,7 @@
 
 \seq_new:N\l_balancelines_words_seq
 \dim_new:N\l_balancelines_boxwidth_dim
+\box_new:N\l_balancelines_textbox_box
 
 %% this macro calculates the width of the output box
 % #1 dimension variable where the width will be set
@@ -17,12 +18,20 @@
 \cs_new:Npn\balancelines_calc_box_width:Nnn #1#2#3{
   % split the argument by spaces, to get individual words (and commands)
   \seq_set_split_keep_spaces:Nnn\l_balancelines_words_seq{~}{#3}
+  \hbox_set:Nn \l_balancelines_textbox_box {#3}
+  \int_set:Nn\l_tmpa_int{\seq_count:N\l_balancelines_words_seq}
+  \typeout{************** width original: \dim_eval:n{\box_wd:N\l_balancelines_textbox_box}, \int_use:N\l_tmpa_int, \fp_eval:n{sqrt(\int_use:N\l_tmpa_int)} }
+  \tl_if_empty:nTF{#2}{
+    % \dim_set:Nn\l_balancelines_boxwidth_dim{\fp_to_dim:n{\dim_to_fp:n{\box_wd:N\l_balancelines_textbox_box}/sqrt(\seq_count:N\l_balancelines_words_seq)}}
+    \dim_set:Nn\l_balancelines_boxwidth_dim{\fp_to_dim:n{\dim_to_fp:n{\box_wd:N\l_balancelines_textbox_box}/(sqrt(\int_use:N\l_tmpa_int))}}
+  }{}
+  \typeout{************** width: \dim_use:N\l_balancelines_boxwidth_dim}
   \seq_map_inline:Nn\l_balancelines_words_seq{\typeout{********** \detokenize{##1}}}
 }
 
 \DeclareRobustCommand\balancelines[1]{
-  \balancelines_calc_box_width:Nn\l_balancelines_boxwidth_dim{}{#1}
-  \texorpdfstring{ahoj: \parbox[t]{10em}{#1}}{#1}}
+  \balancelines_calc_box_width:Nnn\l_balancelines_boxwidth_dim{}{#1}
+  \texorpdfstring{ahoj: \parbox[t]{\l_balancelines_boxwidth_dim}{#1}}{#1}}
 
 \ExplSyntaxOff
 
