--- a/balancelines-doc.tex
+++ b/balancelines-doc.tex
@@ -8,5 +8,18 @@
 \section{\balancelines{světe, tohle je trošku delší text, aby bylo vidět, jak to vlastně funguje}}
 
 \balancelines{a teď? proč se to vlastně nechová tak, \textbf{jak by} mělo? No a $a = b^2$}
+
+\bigskip
+
+\large
+
+
+\noindent
+\balancelines{Tohle je nadpis}
+
+\bigskip
+
+\noindent
+\balancelines{Tady je taky nadpis}
 \end{document}
 
